--- a/package/PKGBUILD
+++ b/package/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc="VK audio player built in Python & GTK3."
 arch=('any')
 url="http://github.com/and3rson/vkplayer"
 license=('GPL2')
-depends=('python2' 'gtk3' 'libkeybinder3' 'webkitgtk' 'gobject-introspection-runtime' 'python2-dbus')
+depends=('python2' 'gtk3' 'libkeybinder3' 'webkitgtk' 'gobject-introspection-runtime' 'python2-dbus' 'python2-pyglet')
 options=('!strip')
 source=('git+https://github.com/and3rson/vkplayer.git')
 
